--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website",
   "version": "1.1.4",
-  "description": "网站源码1",
+  "description": "网站源码",
   "author": "Harvey Zack <717995589@qq.com>"
 }
